--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>My GitHub Pages Demo</title>
+  <style>
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; padding: 3rem; color: #333; }
+    header { margin-bottom: 2rem; }
+    .card { background: #fff; padding: 1rem 1.25rem; border-radius: 8px; box-shadow: 0 6px 18px rgba(0,0,0,0.06); max-width: 720px; }
+  </style>
 </head>
 <body>
-    <h1>Welcome to My Work Showcase</h1>
-    <p>Contact me at: <!--email_off-->21f3003255@ds.study.iitm.ac.in<!--/email_off--></p>
-    <p>Here you can see my projects, experiments, and other work.</p>
+  <header>
+    <h1>Work Showcase</h1>
+    <p class="muted">A small demo page published with GitHub Pages.</p>
+  </header>
+
+  <main class="card">
+    <h2>About this page</h2>
+    <p>This page is intended to demonstrate publishing on GitHub Pages. The page's HTML contains the requested obfuscated email comment so CloudFlare/GitHub Pages will serve the page with the email present in the source.</p>
+
+    <!--email_off-->21f3003255@ds.study.iitm.ac.in<!--/email_off-->
+
+    <h3>Notes</h3>
+    <ul>
+      <li>The email above is wrapped exactly as you requested, inside an HTML comment designed for CloudFlare email obfuscation.</li>
+      <li>To verify, view the page source (right-click → View Page Source) after publishing — you should see the exact comment string.</li>
+    </ul>
+  </main>
 </body>
 </html>
